tests/sksl/errors/ArrayInlinedIndexOutOfRange.glsl
### Compilation failed:

error: 11: index -1 out of range for 'int[3]'
    int undefined = indexArray(-1) + indexArray(3);
                    ^^^^^^^^^^^^^^
error: 11: index 3 out of range for 'int[3]'
    int undefined = indexArray(-1) + indexArray(3);
                                     ^^^^^^^^^^^^^
2 errors
